--- a/requirements.txt
+++ b/requirements.txt
@@ -1,187 +1,22 @@
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.12
-aiosignal==1.3.2
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.8.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.4
-attrs==25.1.0
-babel==2.17.0
-beautifulsoup4==4.13.3
-bleach==6.2.0
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-comm==0.2.2
-dataclasses-json==0.6.7
-debugpy==1.8.12
-decorator==5.2.0
-defusedxml==0.7.1
-executing==2.2.0
-fastjsonschema==2.21.1
-filelock==3.17.0
-fqdn==1.5.1
-frozenlist==1.5.0
-fsspec==2025.2.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.1
-google-api-python-client==2.161.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.4
-googleapis-common-protos==1.68.0
-greenlet==3.1.1
-grpcio==1.70.0
-grpcio-status==1.70.0
-h11==0.14.0
-httpcore==1.0.7
-httplib2==0.22.0
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.29.1
-idna==3.10
-ipykernel==6.29.5
-ipython==8.32.0
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.5
-joblib==1.4.2
-json5==0.10.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-langchain==0.3.19
-langchain-community==0.3.18
-langchain-core==0.3.37
-langchain-huggingface==0.1.2
-langchain-postgres==0.0.13
-langchain-text-splitters==0.3.6
-langsmith==0.3.10
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.1.2
-mpmath==1.3.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-narwhals==1.27.1
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-notebook==7.3.2
-notebook_shim==0.2.4
-numpy==2.2.3
-orjson==3.10.15
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pgvector==0.3.6
-pillow==11.1.0
-pip-chill==1.0.3
-platformdirs==4.3.6
-prometheus_client==0.21.1
-prompt_toolkit==3.0.50
-propcache==0.3.0
-proto-plus==1.26.0
-protobuf==5.29.3
-psutil==7.0.0
-psycopg==3.2.5
-psycopg-binary==3.2.5
-psycopg-pool==3.2.5
-psycopg2-binary==2.9.10
-pure_eval==0.2.3
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.10.6
-pydantic-settings==2.8.0
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.19.1
-pyparsing==3.2.1
-pypdf==5.3.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-json-logger==3.2.1
-pytz==2025.1
-pywin32==308
-pywinpty==2.0.15
-PyYAML==6.0.2
-pyzmq==26.2.1
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.9.4
-rpds-py==0.23.1
-rsa==4.9
-safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.15.2
-Send2Trash==1.8.3
-sentence-transformers==3.4.1
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.38
-stack-data==0.6.3
-streamlit==1.42.2
-sympy==1.13.1
-tenacity==9.0.0
-terminado==0.18.1
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tokenizers==0.21.0
-toml==0.10.2
+beautifulsoup4
+google-generativeai
+langchain
+langchain-community
+langchain-core
+langchain-huggingface
+langchain-postgres
+langchain-text-splitter
+langsmith
+pgvector
+psycopg-binary
+psycopg2-binary
+pypdf
+python-dotenv
+sentence-transformers
+SQLAlchemy
+streamlit
 torch==2.5.1+cu121
 torchaudio==2.5.1+cu121
 torchvision==0.20.1+cu121
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.49.0
-types-python-dateutil==2.9.0.20241206
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2025.1
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==2.3.0
-uv==0.6.2
-watchdog==6.0.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-yarl==1.18.3
-zstandard==0.23.0
+urllib3
+uv
