--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ python-dotenv
 sentence-transformers
 SQLAlchemy
 streamlit
-torch==2.5.1+cu121
-torchaudio==2.5.1+cu121
-torchvision==0.20.1+cu121
+torch
+torchaudio
+torchvision
 urllib3
 uv
